--- a/18342001_report.md
+++ b/18342001_report.md
@@ -16,4 +16,4 @@
 
 对于在 Kubernetes 集群上服务的部署过程有了更深的理解。同时，这次我第一次接触了 `jwt` 令牌这个客户端与服务器之间常用的身份认证工具，通过 jwt 令牌以及 `gin` 这个框架中中间件的使用，使得可以通过客户端发送过来的 jwt 令牌认证出当前请求的用户；将这个解析出来的用户信息存入到 `gin.Context` 中就能使得在其他接口需要用到用户信息的时候，能够直接从上下文中解析，不需要在此查询数据库。     
 
-本次的主要收获还是在前端开发当中。由于之前没有系统性的使用过现代web框架，这次从前端界面的构建，界面之间的逻辑交互，到前端与后端的交互这些方面都学到了不少内容。同时，第一次用 React 写具有一定规模的界面，我体会到了 React 中函数式组件，和用类声明的组件在使用方面的异同，由于类组件在处理网络请求方面并不是很灵活，所以我所编写的所有组件都是使用函数式组件来编写的，因而也对于 React Hook 的使用有了不少经验。但是，由于第一次写前端，导致项目结构没有划分的很好，所以与同组的大佬协作起来有一些困难，最后还是决定一个人完成。
+本次的主要收获还是在前端开发当中。由于之前没有系统性的使用过现代web框架，这次从前端界面的构建，界面之间的逻辑交互，到前端与后端的交互这些方面都学到了不少内容。同时，第一次用 React 写具有一定规模的界面，我体会到了 React 中函数式组件，和用类声明的组件在使用方面的异同，由于类组件在处理网络请求方面并不是很灵活，所以我所编写的所有组件都是使用函数式组件来编写的，因而也对于 React Hook 的使用有了不少经验。但是，由于第一次写前端，导致项目结构没有划分的很好，所以代码的可读性较差。
